--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@
 
 /nbproject/private/
 !.gitignore
-/application/storage/files/
+/application/storage/files/4.png
+/application/storage/files/2.potx
+/application/storage/files/3.docx
+/application/storage/files/1.png
