--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,6 +30,11 @@ default.senderName = 'unplagged.com'
 default.senderEmail = 'info@unplagged.com'
 
 [staging : production]
+doctrine.conn.host = 'localhost'
+doctrine.conn.user = 'unplagged'
+doctrine.conn.pass = '$7gv@2!*HJ'
+doctrine.conn.driv = 'pdo_mysql'
+doctrine.conn.dbname = 'unplagged'
 
 [testing : production]
 phpSettings.display_startup_errors = 0
