Added error reporting in staging area

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -36,6 +36,10 @@ doctrine.conn.pass = '$7gv@2!*HJ'
 doctrine.conn.driv = 'pdo_mysql'
 doctrine.conn.dbname = 'unplagged'
 
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
+resources.frontController.params.displayExceptions = 1
+
 [testing : production]
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
