--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -41,15 +41,11 @@ phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
 [testing : production]
-phpSettings.display_startup_errors = 0
-phpSettings.display_errors = 0
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
+resources.frontController.params.displayExceptions = 1
 
 [development : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
-
-[testing]
-phpSettings.display_startup_errors = 0
-phpSettings.display_errors = 0
-phpSettings.date.timezone = "Europe/Berlin"
