--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -23,11 +23,14 @@ resources.view.doctype = "XHTML1_STRICT"
 
 link.accountVerification = 'http://unplagged.local/user/verify/hash/'
 
+;Custom configuration values
 
 default.portalName = '[unplagged.com]'
 
 default.senderName = 'unplagged.com'
 default.senderEmail = 'info@unplagged.com'
+
+ocr.tesseract.path = ''
 
 [staging : production]
 doctrine.conn.host = 'localhost'
