Moves tesseract path to config, adds methods for deleting document pages, documents and files'

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,7 +30,7 @@ default.portalName = '[unplagged.com]'
 default.senderName = 'unplagged.com'
 default.senderEmail = 'info@unplagged.com'
 
-ocr.tesseract.path = ''
+parser.tesseractPath = '/usr/bin/tesseract'
 
 [staging : production]
 doctrine.conn.host = 'localhost'
@@ -43,6 +43,8 @@ phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
+parser.tesseractPath = '/usr/bin/tesseract'
+
 [testing : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
@@ -52,3 +54,10 @@ resources.frontController.params.displayExceptions = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+
+[benjamin : production]
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
+resources.frontController.params.displayExceptions = 1
+
+parser.tesseractPath = '/usr/local/bin/tesseract'
