--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,7 +30,7 @@ default.portalName = '[unplagged.com]'
 default.senderName = 'unplagged.com'
 default.senderEmail = 'info@unplagged.com'
 
-parser.tesseractPath = '/usr/bin/tesseract'
+parser.tesseractPath = 'tesseract'
 
 [staging : production]
 doctrine.conn.host = 'localhost'
@@ -42,8 +42,6 @@ doctrine.conn.dbname = 'unplagged'
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
-
-parser.tesseractPath = '/usr/bin/tesseract'
 
 [testing : production]
 phpSettings.display_startup_errors = 1
