--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -31,6 +31,7 @@ default.senderName = 'unplagged.com'
 default.senderEmail = 'info@unplagged.com'
 
 parser.tesseractPath = 'tesseract'
+parser.imagemagickPath = 'convert'
 
 [staging : production]
 doctrine.conn.host = 'localhost'
@@ -59,3 +60,4 @@ phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
 parser.tesseractPath = '/usr/local/bin/tesseract'
+parser.imagemagickPath = '/usr/local/bin/convert'
