--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -31,6 +31,7 @@ default.senderName = 'unplagged.com'
 default.senderEmail = 'info@unplagged.com'
 
 parser.tesseractPath = 'tesseract'
+simtext.simtextPath = 'C:\simtext\sim_c'
 
 [staging : production]
 doctrine.conn.host = 'localhost'
@@ -42,6 +43,8 @@ doctrine.conn.dbname = 'unplagged'
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+
+simtext.simtextPath = 'sim_c'
 
 [testing : production]
 phpSettings.display_startup_errors = 1
