Added logging mechanism

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -34,6 +34,9 @@ parser.tesseractPath = 'tesseract'
 parser.imagemagickPath = 'convert -compress None'
 simtext.simtextPath = 'C:\simtext\sim_c'
 
+;Additional .ini files
+config[] = APPLICATION_PATH "/configs/log.ini"
+
 [staging : production]
 doctrine.conn.host = 'localhost'
 doctrine.conn.user = 'unplagged'
