Some minor fixes

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,6 +30,9 @@ default.portalName = '[unplagged.com]'
 default.senderName = 'unplagged.com'
 default.senderEmail = 'info@unplagged.com'
 
+default.welcomeMessage = "This system offers you a simple, web-based, collaborative approach to 
+                          document and detect plagiarism in scientific papers."
+
 parser.tesseractPath = 'tesseract'
 parser.imagemagickPath = 'convert -compress None'
 simtext.simtextPath = 'C:\simtext\sim_c'
