adds ajax pagination to all tables, beautifies submenu in main navigation and cleanup of navigation init

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -37,6 +37,8 @@ parser.tesseractPath = 'tesseract'
 parser.imagemagickPath = 'convert -compress None'
 simtext.simtextPath = 'C:\simtext\sim_c'
 
+paginator.itemsPerPage = 5
+
 ;Additional .ini files
 
 [staging : production]
