--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -3,7 +3,7 @@ phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 phpSettings.date.timezone = "Europe/Berlin"
 
-includePaths.library = APPLICATION_PATH "/../library"
+includePaths.library = BASE_PATH "/library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
