--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,9 @@
 RewriteEngine On
+RewriteRule !\.(js|ico|gif|jpg|png|css|php)$ index.php
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
 RewriteCond %{REQUEST_FILENAME} -d
+RewriteCond %{REQUEST_FILENAME} -f
 RewriteRule ^.*$ - [NC,L]
-RewriteRule ^.*$ index.php [NC,L]
+
+
