--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 /application/storage/files/2.potx
 /application/storage/files/3.docx
 /nbproject/
+docs/Developers Manual/Developers-Manual.lof
+
+docs/Developers Manual/Developers-Manual.pdf
+
+docs/Developers Manual/biblio.bib
