Adds password recovery option for user accounts

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -22,6 +22,7 @@ resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view.doctype = "XHTML1_STRICT"
 
 link.accountVerification = 'http://unplagged.local/user/verify/hash/'
+link.passwordRecovery = 'http://unplagged.local/user/recover-password/hash/'
 
 ;Custom configuration values
 
