fixes some issues in registration process

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -55,6 +55,9 @@ resources.frontController.params.displayExceptions = 1
 
 simtext.simtextPath = 'sim_c'
 
+link.accountVerification = 'http://preview.unplagged.com/user/verify/hash/'
+link.passwordRecovery = 'http://preview.unplagged.com/user/recover-password/hash/'
+
 [testing : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
