inital activity stream

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -40,7 +40,9 @@ simtext.simtextPath = 'C:\simtext\sim_c'
 
 paginator.itemsPerPage = 15
 
-;Additional .ini files
+; constants
+
+constants.NOTIFICATIONS_TIME_INTERVAL = 86400
 
 [staging : production]
 doctrine.conn.host = 'localhost'
