Added url history plugin extracted the class BaseController

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -26,7 +26,7 @@ link.passwordRecovery = 'http://unplagged.local/user/recover-password/hash/'
 
 ;Custom configuration values
 
-default.portalName = '[unplagged.com]'
+default.applicationName = 'Unplagged'
 
 default.senderName = 'unplagged.com'
 default.senderEmail = 'info@unplagged.com'
