--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -36,7 +36,7 @@ default.welcomeMessage = "This system offers you a simple, web-based, collaborat
                           document and detect plagiarism in scientific papers."
 
 parser.tesseractPath = 'tesseract'
-parser.imagemagickPath = 'convert -compress None'
+parser.imagemagickPath = 'convert -compress None -quiet +matte -depth 8'
 simtext.simtextPath = 'C:\simtext\sim_c'
 
 paginator.itemsPerPage = 15
@@ -77,5 +77,3 @@ phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
 parser.tesseractPath = '/usr/local/bin/tesseract'
-parser.imagemagickPath = '/usr/local/bin/convert -compress None'
-
