--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -16,6 +16,7 @@ doctrine.conn.pass = ''
 doctrine.conn.driv = 'pdo_mysql'
 doctrine.conn.dbname = 'unplagged'
 doctrine.path.models = APPLICATION_PATH "/models"
+
 autoloaderNamespaces[] = "Unplagged"
 autoloaderNamespaces[] = "Diff"
 
@@ -28,6 +29,7 @@ link.passwordRecovery = 'http://unplagged.local/user/recover-password/hash/'
 ;Custom configuration values
 
 default.applicationName = 'Unplagged'
+default.language = 'de'
 
 default.senderName = 'unplagged.com'
 default.senderEmail = 'info@unplagged.com'
@@ -40,6 +42,8 @@ parser.imagemagickPath = 'convert -compress None -quiet +matte -depth 8'
 simtext.simtextPath = 'C:\simtext\sim_c'
 
 paginator.itemsPerPage = 15
+
+role.guest = 1
 
 ; constants
 
