--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -80,6 +80,12 @@ phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
+[heiko : production]
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
+resources.frontController.params.displayExceptions = 1
+
+
 parser.tesseractPath = '/usr/local/bin/tesseract'
 
 
