Removed /application/storage/ folder(was replaced by /data/)

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -21,7 +21,7 @@ autoloaderNamespaces[] = "Unplagged"
 autoloaderNamespaces[] = "Diff"
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
-resources.view.doctype = "XHTML1_STRICT"
+resources.view.doctype = "HTML5"
 
 link.accountVerification = 'http://unplagged.local/user/verify/hash/'
 link.passwordRecovery = 'http://unplagged.local/user/recover-password/hash/'
@@ -58,8 +58,6 @@ doctrine.conn.dbname = 'unplagged'
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
-
-simtext.simtextPath = 'sim_c'
 
 link.accountVerification = 'http://preview.unplagged.com/user/verify/hash/'
 link.passwordRecovery = 'http://preview.unplagged.com/user/recover-password/hash/'
