--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -10,6 +10,7 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
+;Doctrine
 doctrine.conn.host = 'localhost'
 doctrine.conn.user = 'root'
 doctrine.conn.pass = ''
