first version report cron job

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -84,6 +84,6 @@ phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
 
-parser.tesseractPath = '/usr/local/bin/tesseract'
+parser.tesseractPath = 'tesseract'
 
 
