--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -38,8 +38,8 @@ default.senderEmail = 'info@unplagged.com'
 default.welcomeMessage = "This system offers you a simple, web-based, collaborative approach to 
                           document and detect plagiarism in scientific papers."
 
-parser.tesseractPath = 'tesseract'
-parser.imagemagickPath = 'convert -compress None -quiet +matte -depth 8'
+parser.tesseractPath = 'tesseract "%s" "%s" -l "%s"'
+parser.imagemagickPath = 'convert -compress None -quiet +matte -depth 8 "%s" "%s"'
 parser.ghostscriptPath = 'gswin32c -o "%s" -sDEVICE=tiffg4 "%s"'
 
 paginator.itemsPerPage = 15
@@ -80,14 +80,13 @@ resources.frontController.params.displayExceptions = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+
 parser.ghostscriptPath = '/usr/local/bin/gs -o "%s" -sDEVICE=tiffg4 "%s"'
+parser.imagemagickPath = '/usr/local/bin/convert -compress None -quiet +matte -depth 8 "%s" "%s"'
+parser.tesseractPath = '/usr/local/bin/tesseract "%s" "%s" -l "%s"'
 
 [heiko : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
-
-
-parser.tesseractPath = 'tesseract'
-
 
