--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,6 +9,7 @@ bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
+;resources.frontController.baseUrl = "/unplagged/public/"
 
 ;Doctrine
 doctrine.conn.host = 'localhost'
