Fixed a default value in the applicationl.ini and improved the unplagged-config-sample.ini

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -13,6 +13,9 @@ resources.frontController.params.displayExceptions = 0
 ;Doctrine
 doctrine.path.models = APPLICATION_PATH "/models"
 
+default.applicationName = 'Unplagged'
+default.language = 'de'
+
 autoloaderNamespaces[] = "Unplagged"
 autoloaderNamespaces[] = "Diff"
 
@@ -35,22 +38,6 @@ paginator.itemsPerPage = 15
 ; constants
 
 constants.NOTIFICATIONS_TIME_INTERVAL = 86400
-
-[staging : production]
-doctrine.conn.host = 'localhost'
-doctrine.conn.user = 'unplagged'
-doctrine.conn.pass = '$7gv@2!*HJ'
-doctrine.conn.driv = 'pdo_mysql'
-doctrine.conn.dbname = 'unplagged'
-
-phpSettings.display_startup_errors = 1
-phpSettings.display_errors = 1
-resources.frontController.params.displayExceptions = 1
-
-link.accountVerification = 'http://preview.unplagged.com/user/verify/hash/'
-link.passwordRecovery = 'http://preview.unplagged.com/user/recover-password/hash/'
-parser.ghostscriptPath = 'gs -o "%s" -sDEVICE=tiffg4 "%s"'
-
 
 [testing : production]
 phpSettings.display_startup_errors = 1
