--- a/application/configs/unplagged-config-sample.ini
+++ b/application/configs/unplagged-config-sample.ini
@@ -13,14 +13,16 @@ doctrine.conn.pass = ''
 doctrine.conn.driv = ''
 doctrine.conn.dbname = ''
 
-default.applicationName = 'Unplagged'
-default.language = 'de'
+;default.applicationName = ''
+;default.language = ''
 
-default.senderName = 'unplagged.com'
-default.senderEmail = 'info@unplagged.com'
+default.senderName = ''
+default.senderEmail = ''
 
-default.welcomeMessage = '<p>This is the place for a critical examination of scientific papers. The page offers you tools to collaboratively discover, collect and document plagiarism.</p><p>If you would like to participate feel free to <a href="/user/register">register</a> or use our public areas.</p>' 
+; Set this if you want to change the default message that gets displayed on the homepage.
+;default.welcomeMessage = '' 
 
-parser.tesseractPath = 'tesseract "%s" "%s" -l "%s"'
-parser.imagemagickPath = 'convert -compress None -quiet +matte -depth 8 "%s" "%s"'
-parser.ghostscriptPath = 'gswin32c -o "%s" -sDEVICE=tiffg4 "%s"'
+; Set these values if you don't have the needed dependencies on your path.
+;parser.tesseractPath = ''
+;parser.imagemagickPath = ''
+;parser.ghostscriptPath = ''
