Fixed an error with config for staging

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -39,6 +39,8 @@ paginator.itemsPerPage = 15
 
 constants.NOTIFICATIONS_TIME_INTERVAL = 86400
 
+[staging : production]
+
 [testing : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
