Some cleanup and changed logging

--- a/application/configs/log.ini
+++ b/application/configs/log.ini
@@ -1,6 +1,6 @@
 [production]
 resources.log.stream.writerName = "Stream"
-resources.log.stream.writerParams.stream = BASE_PATH "/data/logs/unplagged.log"
+resources.log.stream.writerParams.stream = BASE_PATH "/data/logs/application.log"
 resources.log.stream.writerParams.mode = "a"
 resources.log.stream.filterName = "Priority"
 resources.log.stream.filterParams.priority = 4
