Using a Null logger to avoid problems when no log.ini is provided

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -51,11 +51,13 @@ phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
+;deprecated, but still here for legacy reasons, personal settings should be put into unplagged-config.ini
 [heiko : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
+;deprecated, but still here for legacy reasons, personal settings should be put into unplagged-config.ini
 [benjamin : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
