--- a/application/configs/log.ini
+++ b/application/configs/log.ini
@@ -6,6 +6,22 @@ resources.log.stream.filterName = "Priority"
 resources.log.stream.filterParams.priority = 4
 
 [development : production]
+resources.log.stream.writerName = "Stream"
+resources.log.stream.writerParams.stream = BASE_PATH "/data/logs/application.log"
+resources.log.stream.writerParams.mode = "a"
+resources.log.stream.filterName = "Priority"
+resources.log.stream.filterParams.priority = 7
+
 resources.log.firebug.writerName = "Firebug"
 resources.log.firebug.filterName = "Priority"
 resources.log.firebug.filterParams.priority = 7
+
+[testing]
+
+[staging : development]
+
+
+;deprecated, but still here for legacy reasons, personal settings should be put into unplagged-config.ini
+[benjamin : development]
+[heiko : development]
+
