--- a/application/configs/unplagged-config-sample.ini
+++ b/application/configs/unplagged-config-sample.ini
@@ -26,3 +26,15 @@ default.senderEmail = ''
 ;parser.tesseractPath = ''
 ;parser.imagemagickPath = ''
 ;parser.ghostscriptPath = ''
+
+[staging : production]
+
+[testing : production]
+
+[development : production]
+
+;deprecated, but still here for legacy reasons, personal settings should be put into unplagged-config.ini
+[heiko : production]
+
+;deprecated, but still here for legacy reasons, personal settings should be put into unplagged-config.ini
+[benjamin : production]
