Fixed wrong usage of hasResource() instead of hasPluginResource

--- a/application/configs/log.ini
+++ b/application/configs/log.ini
@@ -1,3 +1,4 @@
+;only log serious problems
 [production]
 resources.log.stream.writerName = "Stream"
 resources.log.stream.writerParams.stream = BASE_PATH "/data/logs/application.log"
@@ -5,6 +6,7 @@ resources.log.stream.writerParams.mode = "a"
 resources.log.stream.filterName = "Priority"
 resources.log.stream.filterParams.priority = 4
 
+;log everything and also write to FirePHP
 [development : production]
 resources.log.stream.writerName = "Stream"
 resources.log.stream.writerParams.stream = BASE_PATH "/data/logs/application.log"
@@ -16,12 +18,11 @@ resources.log.firebug.writerName = "Firebug"
 resources.log.firebug.filterName = "Priority"
 resources.log.firebug.filterParams.priority = 7
 
+;doesn't need any logging, so disable it
 [testing]
 
-[staging : development]
-
-
 ;deprecated, but still here for legacy reasons, personal settings should be put into unplagged-config.ini
+[staging : development]
 [benjamin : development]
 [heiko : development]
 
