--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,13 @@
 RewriteEngine On
+
+#redirect default routes of Zend here to the customly 
+#defined ones of /config/routes.ini
+redirect 301 /auth/login /login
+redirect 301 /user/register /register
+redirect 301 /index/imprint /imprint
+
+#rewrite anything that is not an existing file to the 
+#index.php so that Zend can handle everything else
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
 RewriteCond %{REQUEST_FILENAME} -d
