Basic content from registry for imprint page

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -35,6 +35,11 @@ parser.ghostscriptPath = 'gswin32c -o "%s" -sDEVICE=tiffg4 "%s"'
 
 paginator.itemsPerPage = 15
 
+;displayed on the imprint page
+imprint.address = ''
+imprint.telephone = ''
+imprint.email = ''
+
 ; constants
 
 constants.NOTIFICATIONS_TIME_INTERVAL = 86400
