--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -6,7 +6,7 @@ resources.router.routes.login.route = ":action"
 resources.router.routes.login.defaults.controller = "auth"
 resources.router.routes.login.defaults.action = "login"
 
-resources.router.routes.register.route = "regist"
+resources.router.routes.register.route = "register"
 resources.router.routes.register.defaults.controller = "user"
 resources.router.routes.register.defaults.action = "register"
 
