--- a/application/configs/unplagged-config-sample.ini
+++ b/application/configs/unplagged-config-sample.ini
@@ -27,6 +27,12 @@ default.senderEmail = ''
 ;parser.imagemagickPath = ''
 ;parser.ghostscriptPath = ''
 
+imprint.address = 'Jane Doe<br />
+Street 12<br />
+10969 Berlin'
+imprint.telephone = '+49 30 12345678'
+imprint.email = 'email@example.com'
+
 [staging : production]
 
 [testing : production]
