Fixed bug in routes where home couldn't be accessed

--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -2,7 +2,7 @@
 ;everything that would need a redirect from the default
 ;route needs to be put into .htaccess
 [production]
-resources.router.routes.login.route = ":action"
+resources.router.routes.login.route = "login"
 resources.router.routes.login.defaults.controller = "auth"
 resources.router.routes.login.defaults.action = "login"
 
