--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -36,9 +36,11 @@ parser.ghostscriptPath = 'gswin32c -o "%s" -sDEVICE=tiffg4 "%s"'
 paginator.itemsPerPage = 15
 
 ;displayed on the imprint page
-imprint.address = ''
-imprint.telephone = ''
-imprint.email = ''
+contact.imprint.address = ''
+contact.imprint.telephone = ''
+contact.imprint.email = ''
+
+contact.webmaster.email = ''
 
 ; constants
 
@@ -55,8 +57,9 @@ phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
-;deprecated, but still here for legacy reasons, personal settings should be put into unplagged-config.ini
 [staging : production]
+
+;deprecated, but still here for legacy reasons, personal settings should be put into unplagged-config.ini
 [heiko : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
