Some changes to wording of teaser text

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -27,7 +27,7 @@ link.passwordRecovery = 'http://unplagged.local/user/recover-password/hash/'
 
 ;Custom configuration values
 
-default.welcomeMessage = '<p>This is the place for a critical examination of scientific papers. The page offers you tools to collaboratively discover, collect and document plagiarism.</p><p>If you would like to participate feel free to <a href="/user/register">register</a> or use our public areas.</p>' 
+default.welcomeMessage = 'This is a collaborative open-source tool to help you discover, collect and reliably document plagiarism in scientific papers. For more information and documentation please visit <a href="">Unplagged at Github.</a></br /><br />If you would like to participate feel free to <a href="/user/register">register</a> or use our public areas.</p>' 
 
 parser.tesseractPath = 'tesseract "%s" "%s" -l "%s"'
 parser.imagemagickPath = 'convert -compress None -quiet +matte -depth 8 "%s" "%s"'
