New welcome message text

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -27,7 +27,8 @@ link.passwordRecovery = 'http://unplagged.local/user/recover-password/hash/'
 
 ;Custom configuration values
 
-default.welcomeMessage = 'This is a collaborative open-source tool to help you discover, collect and reliably document plagiarism in scientific papers. For more information and documentation please visit <a href="">Unplagged at Github.</a></br /><br />If you would like to participate feel free to <a href="/user/register">register</a> or use our public areas.</p>' 
+default.welcomeMessage = 'Unplagged is a collaborative open-source tool to help you discover, collect and reliably document plagiarism in scientific theses, papers, books and the like. It is based on the workflows that were employed and developed by the german Wiki pages <a href="http://de.vroniplag.wikia.com/wiki/Home">VroniPlag</a> and <a href="http://de.guttenplag.wikia.com/wiki/GuttenPlag_Wiki">GuttenPlag</a>. For more information and documentation for this system, please <a href="http://github.com/Unplagged/unplagged">visit Unplagged at Github.</a></br /><br />This system is still in an early Beta stage, but if you would like to participate or test here, feel free to <a href="/user/register">register</a> and <a href="https://github.com/Unplagged/unplagged/issues/new">report any issues</a> or <a href="https://github.com/Unplagged/unplagged/fork_select">fork the source code</a>, to make changes yourself.<br /><br />
+<strong>Attention: Please be aware that input data could be deleted, when we feel that changes to the database structure are necessary.</strong></p>' 
 
 parser.tesseractPath = 'tesseract "%s" "%s" -l "%s"'
 parser.imagemagickPath = 'convert -compress None -quiet +matte -depth 8 "%s" "%s"'
