--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -35,6 +35,8 @@ default.welcomeMessage.de = 'Unplagged ist ein Open-Source Tool zur gemeinschaft
 parser.tesseractPath = 'tesseract "%s" "%s" -l "%s"'
 parser.imagemagickPath = 'convert -compress None -quiet +matte -depth 8 "%s" "%s"'
 parser.ghostscriptPath = 'gswin32c -o "%s" -sDEVICE=tiffg4 "%s"'
+parser.availableLanguages[] = 'en'
+parser.availableLanguages[] = 'de'
 
 paginator.itemsPerPage = 15
 
