--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -63,3 +63,6 @@ phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
 [staging : production]
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
+resources.frontController.params.displayExceptions = 1
