create html templates used to build the report

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 /docs/Developers Manual/parts/*.aux
 /application/configs/unplagged-config.ini
 
+/data/doctrine/*
+/data/logs/*
 
 /nbproject/private/
 !.gitignore
