Moved Zend_Navigation config from bootstrap into an xml file

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ docs/Developers Manual/biblio.bib
 /data/doctrine/__CG__Application_Model_Case.php
 /data/doctrine/__CG__Application_Model_User.php
 /data/doctrine/__CG__Application_Model_Document_Page.php
+!/data/
+/data/logs/application.log
+/data/logs/untranslated.log
