Added support for SASS

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,6 +1,14 @@
+; This file contains all basic configruation options for the Unplagged 
+; application. It should NOT be changed by users. 
+;
+; In order to overwrite the default values provided here, you can set those
+; inside the "unplagged-config.ini", which takes precedence over this file.
+
+
 [production]
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
+
 phpSettings.date.timezone = "Europe/Berlin"
 
 includePaths.library = BASE_PATH "/library"
