beautifying setup wizzard

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,8 +30,8 @@ autoloaderNamespaces[] = "Diff"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view.doctype = "HTML5"
 
-link.accountVerification = 'http://unplagged.local/user/verify/hash/'
-link.passwordRecovery = 'http://unplagged.local/user/recover-password/hash/'
+link.accountVerification = '/user/verify/hash/'
+link.passwordRecovery = '/user/recover-password/hash/'
 
 ;Custom configuration values
 
