--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "library/Zend2"]
-	path = library/Zend2
-	url = git://github.com/zendframework/zf2.git
+[submodule "vendor/ZF2"]
+  path = vendor/ZF2
+  url = https://github.com/zendframework/zf2.git
