--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
-    "require": {
-        "php": ">=5.3.3",
-        "zendframework/zendframework": "2.*",
-        "doctrine/DoctrineORMModule": "dev-master"
-    }
+  "name": "unplagged/unplagged",
+  "description": "Plagiarism Detection Tool",
+  "license": "GPLv3",
+  "require": {
+    "php": ">=5.3.3",
+    "zendframework/zendframework": "2.*",
+    "doctrine/orm": "2.3.0"
+  }
 }
