--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,11 @@
   "name": "unplagged/unplagged",
   "description": "Plagiarism Detection Tool",
   "license": "GPLv3",
+  "minimum-stability": "alpha",
   "require": {
     "php": ">=5.3.3",
     "zendframework/zendframework": "2.*",
-    "doctrine/orm": "2.3.0"
+    "zendframework/zendframework1": "1.*",
+    "doctrine/doctrine-orm-module": "0.*"
   }
 }
