--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -6,26 +6,8 @@
 
 
 [production]
-phpSettings.display_startup_errors = 0
-phpSettings.display_errors = 0
 
-phpSettings.date.timezone = "Europe/Berlin"
 
-includePaths.library = BASE_PATH "/library"
-bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
-bootstrap.class = "Bootstrap"
-appnamespace = "Application"
-resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
-resources.frontController.params.displayExceptions = 0
-
-;Doctrine
-doctrine.path.models = APPLICATION_PATH "/models"
-
-default.applicationName = 'Unplagged'
-default.language = 'de'
-
-autoloaderNamespaces[] = "Unplagged"
-autoloaderNamespaces[] = "Diff"
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view.doctype = "HTML5"
@@ -33,12 +15,7 @@ resources.view.doctype = "HTML5"
 link.accountVerification = '/user/verify/hash/'
 link.passwordRecovery = '/user/recover-password/hash/'
 
-;Custom configuration values
-
-default.welcomeMessage.default = 'Unplagged is a collaborative open source tool to help you discover, collect and reliably document plagiarism in scientific theses, papers, books and other scientific or school-based writing. It is based on the workflows that were employed and developed by the german websites <a href="http://de.vroniplag.wikia.com/wiki/Home">VroniPlag-Wiki</a> and <a href="http://de.guttenplag.wikia.com/wiki/GuttenPlag_Wiki">GuttenPlag-Wiki</a>.</br /><br />For more information and documentation for this system, please <a href="http://github.com/Unplagged/unplagged">visit Unplagged at Github.</a> This system is still in an early Beta stage, but if you would like to participate or test here, feel free to <a href="/user/register">register</a> and <a href="https://github.com/Unplagged/unplagged/issues/new">report any issues</a> you find to us or <a href="https://github.com/Unplagged/unplagged/fork_select">fork the source code over at Github</a>, to make changes yourself.<br /><br />
-<strong>Attention: Please be aware that input data could be deleted, when we feel that changes to the database structure are necessary.</strong></p>' 
-default.welcomeMessage.de = 'Unplagged ist ein Open-Source Tool zur gemeinschaftlichen Suche, Sammlung und Dokumentation von belastbaren Plagiatsfundstellen in Doktorarbeiten, Habilitationen, Artikeln, Büchern und ähnlichen wissenschaftlichen oder schulischen Arbeiten. Es basiert auf den Arbeitsweisen, die durch die beiden Portale <a href="http://de.vroniplag.wikia.com/wiki/Home">VroniPlag-Wiki</a> und <a href="http://de.guttenplag.wikia.com/wiki/GuttenPlag_Wiki">GuttenPlag-Wiki</a> entwickelt und angewendet werden.</br /><br />Für weitere Informationen kannst du gerne bei <a href="http://github.com/Unplagged/unplagged">Unplagged auf Github</a> vorbeischauen. Die Software befindet sich immer noch in einem frühen Betastadium, aber wenn du dich gerne an der Entwicklung beteiligen möchtest, dann <a href="/user/register">registriere</a> dich doch hier und <a href="https://github.com/Unplagged/unplagged/issues/new">berichte uns über alle gefundenen Probleme</a>, oder <a href="https://github.com/Unplagged/unplagged/fork_select">fork den Quellcode bei Github</a> und ändere selber.<br /><br />
-<strong>Achtung: Sollten während der Entwicklung Änderungen an der Datenbankstruktur notwendig werden, ist es möglich, dass alle hier eingegebene Daten gelöscht werden.</strong></p>'
+;Custom configuration value
 
 parser.tesseractPath = 'tesseract "%s" "%s" -l "%s"'
 parser.imagemagickPath = 'convert -compress None -quiet +matte -depth 8 "%s" "%s"'
