Updated ignoring of autogenerated reports after restructuring the directories

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ nbproject
 composer.lock
 
 /application/configs/unplagged-config.ini
-/docs/coverage/
-/docs/api-docs/
+/resources/docs/coverage/
+/resources/docs/api-docs/
 /data/logs/application.log
 /data/logs/untranslated.log
 /vendor
